# PaiCLI-Python

./: README.md  pyproject.toml
docs/: parity.md
src/paicli/: config.py
src/paicli/agent/: __init__.py  agent.py  orchestrator.py  plan_execute.py  query.py  query_engine.py
src/paicli/builtin_skills/web-access/: SKILL.md
src/paicli/entrypoints/: repl.py
src/paicli/plan/: __init__.py  models.py  planner.py
src/paicli/skill/: __init__.py  registry.py
src/paicli/tools/: base.py  builtins.py
src/paicli/web/: search.py
tests/: test_multi_agent.py  test_plan.py  test_skill.py
