[project]
name = "paicli-python"
version = "0.1.0"
description = "Python terminal AI agent CLI with ReAct tools, MCP, Runtime API, memory, snapshots, web search, and image input"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PaiCLI Contributors" }]
keywords = ["agent", "ai", "cli", "llm", "mcp", "react", "terminal"]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.27,<2",
  "pillow>=10.0",
  "prompt-toolkit>=3.0.43",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.scripts]
paicli = "paicli.entrypoints.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
search = [
  "tavily-python>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/paicli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
